<resources>
    <string name="app_name">ESUTDY</string>
    <string name="menu_signout">Sign Out</string>
    <string name="student_header_workspace">STUDENT WORKSPACE</string>
    <string name="header_quiz_completed">Completed Quizzes</string>
    <string name="header_quiz_uncompleted">Quizzes To Do</string>
    <string name="progress_text">50% to go</string>
    <string name="feedback_header">FEEDBACK FOR QUIZ</string>
    <string name="feedback_text">Feedback</string>
    <string name="progress_intro_text">A quick summary of your progress</string>
    <string name="instructor_header_workspace">INSTRUCTOR WORKSPACE</string>
    <string name="instructor_encouragement">In this great big world, YOU make a difference</string>
    <string name="instructor_quiz_header">Your Quizzes</string>
    <string name="quiz1_text">Quiz 1</string>
    <string name="app_slogan">Bringing you conveniencESUTDY</string>
    <string name="app_intro">Welcome to ESUTDY</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Or sign up here</string>
    <string name="signup_header">Just one step away ...</string>
    <string name="name_text">Name</string>
    <string name="email_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="selectAcc_text">Please select your account type</string>
    <string name="selectSch_text">Please select your school</string>
    <string name="submit_text">Submit</string>
    <string name="duedate_text">Due Date</string>
    <string name="description_text">Quiz Description</string>
    <string name="score_text">Quiz Score: 10</string>
    <string name="startQuiz_text">Start Quiz</string>
    <string name="quizSummary_text">Summary for Quiz 1</string>
    <string name="returnHome_text">Return Home</string>
    <string name="question_text">Question</string>
    <string name="choice_text">MCQ Choices</string>
    <string name="choice1_text">Choice 1</string>
    <string name="choice2_text">Choice 2</string>
    <string name="choice3_text">Choice 3</string>
    <string name="choice4_text">Choice 4</string>
    <string name="nextQn_text">next qn</string>
    <string name="createQuiz_text">create quiz</string>
    <string name="createQn_text">create question</string>
    <string name="ans_text">Answer</string>
    <string name="qnscore_text">Question Score</string>
    <string name="quiztitle_text">Quiz Title</string>
    <string name="next_text">next</string>
    <string name="quizqn_text">Questions in Quiz</string>
    <string name="addqn_text">Add Question</string>
    <string name="deleteqn_text">Delete Question</string>
    <string name="deletequiz_text">Delete Quiz</string>
    <string name="publishquiz_text">Publish Quiz</string>
    <string name="unpublishquiz_text">Unpublish Quiz</string>
    <string name="liststudent_text">List of all students</string>
    <string name="writefeedback_text">Write your feedback here</string>
    <string name="studentinfo_text">Student Information</string>
    <string name="submitfeedback_text">Submit Feedback</string>
    <string name="choice">Choice</string>
    <string name="verify_password_text">Verify Password</string>
    <string name="fill_in_quiz_title">Please fill in the quiz title</string>
    <string name="quiz_exist_text">Quiz exist</string>


</resources>
