<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InstructorReviewActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_main">


        <TextView
            android:id="@+id/student_info_header"
            style="@style/TextCapsBold"
            android:text="@string/studentinfo_text"/>


    </androidx.appcompat.widget.Toolbar>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/instructorStudentsQuiz_recyclerview_id"
        style="@style/recyclerView"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <EditText
        android:id="@+id/feedback_editText"
        style="@style/edit_text"
        app:layout_constraintWidth_percent="0.93"

        android:hint="@string/writefeedback_text"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61"
        android:gravity="left"
        android:paddingVertical="16dp"
        android:background="@drawable/edit_text_background_big"/>


    <Button
        android:text="@string/submitfeedback_text"
        android:id="@+id/feedback_submitButton"
        style="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.75"/>

</androidx.constraintlayout.widget.ConstraintLayout>